Переписаны схемы в Swagger
